--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "mkdir -p ./build && coffee -m -c -o ./build ./",
+    "start": "concurrently --kill-others 'npm run watch' 'npm run server'",
+    "server": "react-native start",
+    "watch": "npm run compile && coffee -m -w -c -o ./build ./",
+    "compile": "npm run clean && mkdir -p ./build && coffee -m -c -o ./build ./",
     "clean": "rm -Rf ./build"
   },
   "dependencies": {
@@ -11,6 +14,7 @@
     "react-native": "0.30.0"
   },
   "devDependencies": {
-    "coffee-script": "^1.10.0"
+    "coffee-script": "^1.10.0",
+    "concurrently": "^2.2.0"
   }
 }
