--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AwesomeProject",
+  "name": "react-native-coffee-boilerpolate",
   "version": "0.0.1",
   "private": true,
   "scripts": {
